--- a/app/src/main/res/layout/fragment_parking_list.xml
+++ b/app/src/main/res/layout/fragment_parking_list.xml
@@ -3,12 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ParkingListFragment">
+    tools:context=".ParkingListFragment"
+    android:background="@color/app_color">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+        android:id="@+id/rvParkingList"/>
 </FrameLayout>
