--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,11 +21,10 @@
             android:fontFamily = "serif-monospace"/>
 
         <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragmentContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="50dp"
-            android:id="@+id/fragmentContainer"
-
+            android:layout_marginBottom="60dp"
             />
     </LinearLayout>
 
@@ -34,7 +33,7 @@
     <com.google.android.material.bottomappbar.BottomAppBar
         android:id="@+id/bottomAppBar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_gravity="bottom"
         app:fabCradleMargin="10dp"
         android:gravity="center"
