--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -31,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="display Name"
-        android:id="@+id/tvLastName"
+        android:id="@+id/tvDisplayFirstName"
         android:textSize="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
@@ -42,7 +42,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tvUsername"
+        android:id="@+id/tvLastName"
         android:text="Last Name"
         android:textSize="20dp"
         android:layout_marginStart="20dp"
@@ -50,7 +50,7 @@
         android:paddingTop="20dp"
         android:fontFamily = "serif-monospace"
         android:textColor="@color/app_color"
-        app:layout_constraintTop_toBottomOf="@+id/tvLastName"
+        app:layout_constraintTop_toBottomOf="@+id/tvDisplayFirstName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         />
@@ -59,11 +59,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="display lastname "
-        android:id="@+id/tvDisplayLastName"
+        android:id="@+id/displayLastName"
         android:textSize="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/tvUsername"
+        app:layout_constraintTop_toBottomOf="@+id/tvLastName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
@@ -78,7 +78,7 @@
         android:paddingTop="20dp"
         android:fontFamily = "serif-monospace"
         android:textColor="@color/app_color"
-        app:layout_constraintTop_toBottomOf="@+id/tvDisplayLastName"
+        app:layout_constraintTop_toBottomOf="@+id/displayLastName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         />
@@ -86,8 +86,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="displayPlate Number"
-        android:id="@+id/tvDisplayPhone"
+        android:hint="display Phone Number"
+        android:id="@+id/tvDisplayPhoneNumber"
         android:textSize="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
@@ -107,7 +107,7 @@
         android:paddingTop="20dp"
         android:fontFamily = "serif-monospace"
         android:textColor="@color/app_color"
-        app:layout_constraintTop_toBottomOf="@+id/tvDisplayPhone"
+        app:layout_constraintTop_toBottomOf="@+id/tvDisplayPhoneNumber"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
     />
@@ -116,7 +116,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint=" display Plate Number"
-        android:id="@+id/etContactNumber"
+        android:id="@+id/tvDisplayPlateNumber"
         android:textSize="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
@@ -135,7 +135,7 @@
         android:paddingTop="20dp"
         android:fontFamily = "serif-monospace"
         android:textColor="@color/app_color"
-        app:layout_constraintTop_toBottomOf="@+id/etContactNumber"
+        app:layout_constraintTop_toBottomOf="@+id/tvDisplayPlateNumber"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
     />
@@ -144,7 +144,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="display email"
-        android:id="@+id/etCarPlate"
+        android:id="@+id/tvDisplayEmailId"
         android:textSize="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
@@ -153,22 +153,22 @@
         app:layout_constraintStart_toStartOf="parent"/>
 
     <Button
-        android:id="@+id/btUpdate"
+        android:id="@+id/btEditProfile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Update Profile"
-        app:layout_constraintBottom_toTopOf="@+id/btDelete"
+        android:text="Edit Profile"
+        app:layout_constraintBottom_toTopOf="@+id/btDeleteAccount"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etCarPlate"
+        app:layout_constraintTop_toBottomOf="@+id/tvDisplayEmailId"
         app:layout_constraintVertical_bias="1.0" />
 
     <Button
-        android:id="@+id/btDelete"
+        android:id="@+id/btDeleteAccount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Delete Profile"
+        android:text="Delete Account ?"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
