--- a/app/src/main/res/layout/fragment_add_parking.xml
+++ b/app/src/main/res/layout/fragment_add_parking.xml
@@ -217,6 +217,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Add Parking"
+            android:id="@+id/btnAddParking"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="20dp"
             app:layout_constraintEnd_toEndOf="parent"
