--- a/app/src/main/res/layout/parking_list_cell_layout.xml
+++ b/app/src/main/res/layout/parking_list_cell_layout.xml
@@ -17,16 +17,35 @@
         android:padding="20dp"
         >
 
-        <TextView
-            android:id="@+id/tvBuildingCode"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_weight="1"
-            android:text="aefdsg"
-            android:textSize="20dp"
+            android:layout_height="match_parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btnUpdateParking"
+            android:layout_marginRight="10dp"
+            android:id="@+id/cellView">
+            <TextView
+                android:id="@+id/tvBuildingCode"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:text="aefdsg"
+                android:textSize="20dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/tvAddress"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="18dp"
+                android:layout_weight="1"
+                android:text="adfsg"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvBuildingCode" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
         <ImageButton
             android:id="@+id/btnDeleteParking"
@@ -37,18 +56,10 @@
             android:text="delete"
             android:background="@color/transparent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintLeft_toRightOf="@+id/tvBuildingCode"
+            app:layout_constraintLeft_toRightOf="@+id/cellView"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tvAddress"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="18dp"
-            android:layout_weight="1"
-            android:text="adfsg"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvBuildingCode" />
+
 
         <ImageButton
             android:id="@+id/btnUpdateParking"
@@ -59,7 +70,7 @@
             android:text="delete"
             android:background="@color/transparent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintLeft_toRightOf="@+id/tvAddress"
+            app:layout_constraintLeft_toRightOf="@+id/cellView"
             app:layout_constraintTop_toBottomOf="@+id/btnDeleteParking" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
